src/objects/Knowledge__kav.object
<CustomObject>
    <recordTypes>
        <fullName>CH_Standard</fullName>
        <active>true</active>
        <description>Should be used for : • Internal or external FAQ • Information Request / Technical Query • Technical Notes</description>
        <label>Q&amp;A</label>
    </recordTypes>
    <recordTypes>
        <fullName>CH_TechnicalProcedure</fullName>
        <active>true</active>
        <description>Describe a generic way to accomplish some specific complex tasks that may alter system. Usually, you have to plan such kind of operation and consider rollback</description>
        <label>Technical Procedure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Portal_Content</fullName>
        <active>true</active>
        <label>Customer Portal Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Knowledge</fullName>
        <active>true</active>
        <description>This is intended to be used by internal Nokia Users ONLY.</description>
        <label>Internal Knowledge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Article</fullName>
        <active>true</active>
        <label>Standard Article</label>
    </recordTypes>
    <validationRules>
        <fullName>CH_CandidateExternalCheck</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL( ValidationStatus, &quot;Needs Publisher Review&quot;), ISPICKVAL( ValidationStatus, &quot;In Publisher Review&quot;))  &amp;&amp;  ISPICKVAL( PublishStatus , &quot;Draft&quot;)  &amp;&amp;  NOT( CH_Candidate_for_External__c )  &amp;&amp;  CH_KnowledgeRecordTypeCheck__c = TRUE</errorConditionFormula>
        <errorMessage>&quot;Publisher cannot approve an article with Candidate for External unchecked.
To move article to Internal Approved, click Reject.
To move article to External Approved, check Candidate for External and then click Approve.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_Candidate_for_External</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
							
	ISCHANGED (CH_Candidate_for_External__c),
				
	ISPICKVAL(ValidationStatus, &quot;Needs Approver Review&quot;) 
				
		&amp;&amp; ISPICKVAL(PublishStatus ,&quot;Draft&quot;))</errorConditionFormula>
        <errorMessage>“Candidate-For-External flag cannot be updated at this stage. Please ask the author to “Recall” this article or reject the approval request to make this change.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_KBWorkgroup</fullName>
        <active>true</active>
        <description>CH KB articles must have workgroups</description>
        <errorConditionFormula>AND((($RecordType.DeveloperName=&quot;CH_Resolution&quot;)
					|| ($RecordType.DeveloperName= &quot;CH_HowTo&quot;)
				 || ($RecordType.DeveloperName= &quot;CH_Standard&quot;)
					|| ($RecordType.DeveloperName= &quot;CH_Alarm&quot;)
					|| ($RecordType.DeveloperName= &quot;CH_TechnicalProcedure&quot;)
				
				)
				
										
										,LEN( CH_Workgroup__c ) =0)</errorConditionFormula>
        <errorMessage>You must select a workgroup for this article</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_Mandatory_of_Reviewer</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(  ValidationStatus ,&quot;In Approver Review&quot;) || ISPICKVAL(  ValidationStatus ,&quot;In Publisher Review&quot;))
&amp;&amp; 
ISBLANK( CH_Reviewer__c )  &amp;&amp; CH_KnowledgeRecordTypeCheck__c = TRUE</errorConditionFormula>
        <errorMessage>Cannot leave Reviewer field empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_NoMinorChangeWhenCreating</fullName>
        <active>true</active>
        <description>Creating an article from scratch it cannot be a minor change and a first version needs to be created</description>
        <errorConditionFormula>AND(CH_Minor_changes__c  = true,  VersionNumber &lt; 1, ISNEW(),(($RecordType.DeveloperName=&quot;CH_Resolution&quot;) || ($RecordType.DeveloperName= &quot;CH_Standard&quot;)|| ($RecordType.DeveloperName=&quot;CH_HowTo&quot;) || ($RecordType.DeveloperName= &quot;CH_KnownError&quot;)))</errorConditionFormula>
        <errorMessage>When creating an article from scratch it cannot be a minor change and a first version needs to be created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_PreventSourceCaseFieldFromBeingEdited</fullName>
        <active>true</active>
        <description>Prevent Source Case field from being edited after creation by Create_Article flow</description>
        <errorConditionFormula>NOT( ISNEW() ) &amp;&amp;  ISCHANGED(CH_CaseId__c)</errorConditionFormula>
        <errorMessage>You cannot change Source Case after article creation. This is only populated when article was created from Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_ProblemDescriptionRequired</fullName>
        <active>true</active>
        <description>Problem Description Field Cannot Be Empty.</description>
        <errorConditionFormula>AND((($RecordType.DeveloperName=&quot;CH_Resolution&quot;) || ($RecordType.DeveloperName= &quot;CH_KnownError&quot;)),LEN( CH_ProblemDescriptionRequired__c ) =0, $Profile.Name != &quot;Data Loader Profile&quot;)</errorConditionFormula>
        <errorMessage>Problem Description Field Cannot Be Empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_ProcedureRequired</fullName>
        <active>true</active>
        <description>Procedure field cannot be empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName= &quot;CH_HowTo&quot;,LEN(  CH_ProcedureRequired__c ) = 0, $Profile.Name != &quot;Data Loader Profile&quot;)</errorConditionFormula>
        <errorMessage>Procedure field cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_PurposeRequired</fullName>
        <active>true</active>
        <description>Purpose field cannot be empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName= &quot;CH_HowTo&quot;,LEN(   CH_PurposeRequired__c ) = 0, $Profile.Name != &quot;Data Loader Profile&quot;)</errorConditionFormula>
        <errorMessage>Purpose field cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_Reviewer_field_non_editable</fullName>
        <active>true</active>
        <description>You cannot select Reviewer Field while creating it</description>
        <errorConditionFormula>(ISPICKVAL( ValidationStatus , &apos;Work In Progress&apos;)   ||  ISPICKVAL( ValidationStatus , &apos;Internal Approved&apos;)    ||   ISPICKVAL( ValidationStatus , &apos;External Approved&apos;)) &amp;&amp; (NOT( ISBLANK(  CH_Reviewer__c  ) ))  &amp;&amp;  CH_KnowledgeRecordTypeCheck__c = TRUE</errorConditionFormula>
        <errorMessage>You Cannot  edit  Reviewer Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_StandardAnsOrResolRequired</fullName>
        <active>true</active>
        <description>Answer or Resolution field cannot be empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName= &quot;CH_Standard&quot;,LEN(    CH_AnswerOrResolution__c ) = 0, $Profile.Name != &quot;Data Loader Profile&quot;)</errorConditionFormula>
        <errorMessage>Answer or Resolution field cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_StandardQuesOrProductRequired</fullName>
        <active>true</active>
        <description>Question or product description field cannot be empty.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName= &quot;CH_Standard&quot;,LEN(   CH_QuestionOrProductDescription__c ) = 0, $Profile.Name != &quot;Data Loader Profile&quot;)</errorConditionFormula>
        <errorMessage>Question or product description field cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_ValidationStatusToWrkInProgress</fullName>
        <active>false</active>
        <description>Work In Progress Is The Default  Value While Creating Article</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL( ValidationStatus ,&apos;Work In Progress&apos;)),ISNEW(),(($RecordType.DeveloperName=&quot;CH_Resolution&quot;) || ($RecordType.DeveloperName= &quot;CH_Standard&quot;)|| ($RecordType.DeveloperName=&quot;CH_How_To&quot;) || ($RecordType.DeveloperName= &quot;CH_Known_Error&quot;)))</errorConditionFormula>
        <errorMessage>Please select Work In Progress in Validation status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Priority_not_Null</fullName>
        <active>true</active>
        <description>Priority cannot be blank for Announcement</description>
        <errorConditionFormula>RecordType.DeveloperName  = &quot;Announcement&quot; 
&amp;&amp; ISBLANK( TEXT(Priority__c))</errorConditionFormula>
        <errorMessage>Priority is Required when record type is Announcement</errorMessage>
    </validationRules>
</CustomObject>