src/objects/Knowledge__kav/fields/Date_Time_Legal_Last_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Legal_Last_Reviewed__c</fullName>
    <description>Date / Time Legal Last Reviewed</description>
    <label>Date / Time Legal Last Reviewed</label>
    <type>DateTime</type>
</CustomField>