src/objects/Knowledge__kav/fields/Status_1st_Legal_Review__c.field-meta.xml
<CustomField>
    <fullName>Status_1st_Legal_Review__c</fullName>
    <label>Status 1st Legal Review</label>
    <length>20</length>
    <type>Text</type>
</CustomField>