src/objects/Knowledge__kav/fields/Status_1st_Technical_Review__c.field-meta.xml
<CustomField>
    <fullName>Status_1st_Technical_Review__c</fullName>
    <label>Status 1st Technical Review</label>
    <length>20</length>
    <type>Text</type>
</CustomField>