src/objects/Knowledge__kav/fields/Technical_Solutions_SBU_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Technical_Solutions_SBU_Impacted__c</fullName>
    <label>SBU Impacted</label>
    <length>20</length>
    <type>Text</type>
</CustomField>