src/objects/Knowledge__kav/recordTypes/CSO_Article.recordType-meta.xml
<RecordType>
    <fullName>CSO_Article</fullName>
    <active>true</active>
    <label>CSO_Article</label>
</RecordType>