src/objects/Knowledge__kav/recordTypes/Knowledge_Article.recordType-meta.xml
<RecordType>
    <fullName>Knowledge_Article</fullName>
    <active>true</active>
    <label>Knowledge_Article</label>
</RecordType>