src/objects/Knowledge__kav/recordTypes/Live_Agent_Article.recordType-meta.xml
<RecordType>
    <fullName>Live_Agent_Article</fullName>
    <active>true</active>
    <label>Live_Agent_Article</label>
</RecordType>