src/objects/Knowledge__kav/recordTypes/Technical_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Technical_Solutions</fullName>
    <active>true</active>
    <label>Technical_Solutions</label>
</RecordType>