src/objects/Knowledge__kav/recordTypes/Technical_Videos.recordType-meta.xml
<RecordType>
    <fullName>Technical_Videos</fullName>
    <active>true</active>
    <label>Technical_Videos</label>
</RecordType>