src/objects/Knowledge__kav/recordTypes/test.recordType-meta.xml
<RecordType>
    <fullName>test</fullName>
    <active>true</active>
    <label>test</label>
</RecordType>