src/objects/Knowledge__kav/validationRules/Candidate_Edit_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_Edit_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,  
OR(ISPICKVAL(Status_Technical_Review__c ,&quot;Passed&quot;),
IsVisibleInPkb, IsVisibleInCsp, IsVisibleInPrm), $Permission.KCS_Candidate )</errorConditionFormula>
    <errorMessage>As a KCS candidate you are not allowed to edit an approved or published article.If you want to enhance this article please record you suggestion in the article feed.</errorMessage>
</ValidationRule>