src/objects/Knowledge__kav/validationRules/Candidate_unpublish_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_unpublish_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
OR (Ischanged(IsVisibleInPkb),Ischanged(IsVisibleInCsp),Ischanged(IsVisibleInPrm)), $Permission.KCS_Candidate )</errorConditionFormula>
    <errorMessage>You are not allowed to change the external publication status because you are a KCS Candidate.</errorMessage>
</ValidationRule>