src/objects/Knowledge__kav/validationRules/Cannot_Publish_ext_if_Confidential.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Publish_ext_if_Confidential</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
OR(IsVisibleInPkb,IsVisibleInCsp,IsVisibleInPrm), R_C__c &lt;&gt;&quot;&quot;)</errorConditionFormula>
    <errorMessage>Article cannot be published externally (channels selection) and marked confidential at the same time. Please update accordingly</errorMessage>
</ValidationRule>