src/objects/Knowledge__kav/validationRules/Cannot_publish_ext_if_flagged_to_remove.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_publish_ext_if_flagged_to_remove</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
OR( IsVisibleInPkb, IsVisibleInCsp, IsVisibleInPrm ), R_A__c &lt;&gt; &quot;&quot; )</errorConditionFormula>
    <errorMessage>Article cannot be published externally (channels selection) and flagged from removal at the same time. Please update accordingly</errorMessage>
</ValidationRule>