src/objects/Knowledge__kav/validationRules/Cannot_publish_ext_if_pending_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_publish_ext_if_pending_validation</fullName>
    <active>true</active>
    <description>Cannot_publish_ext_if_pending_validation</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
OR(
IsVisibleInPkb,
IsVisibleInCsp,
IsVisibleInPrm
),
P_V__c &lt;&gt; &quot;Valid&quot;
)</errorConditionFormula>
    <errorMessage>Article cannot be published externally (channels selection) and pending validation at the same time. Please update accordingly</errorMessage>
</ValidationRule>