src/objects/Knowledge__kav/validationRules/CH_KBWorkgroup.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_KBWorkgroup</fullName>
    <active>true</active>
    <description>CH KB articles must have workgroups</description>
    <errorConditionFormula>AND((($RecordType.DeveloperName=&quot;CH_Resolution&quot;)
					|| ($RecordType.DeveloperName= &quot;CH_HowTo&quot;)
				 || ($RecordType.DeveloperName= &quot;CH_Standard&quot;)
					|| ($RecordType.DeveloperName= &quot;CH_Alarm&quot;)
					|| ($RecordType.DeveloperName= &quot;CH_TechnicalProcedure&quot;)
				
				)
				
										
										,LEN( CH_Workgroup__c ) =0)</errorConditionFormula>
    <errorMessage>You must select a workgroup for this article</errorMessage>
</ValidationRule>