src/objects/Knowledge__kav/validationRules/CH_Reviewer_field_non_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_Reviewer_field_non_editable</fullName>
    <active>true</active>
    <description>You cannot select Reviewer Field while creating it</description>
    <errorConditionFormula>(ISPICKVAL( ValidationStatus , &apos;Work In Progress&apos;)   ||  ISPICKVAL( ValidationStatus , &apos;Internal Approved&apos;)    ||   ISPICKVAL( ValidationStatus , &apos;External Approved&apos;)) &amp;&amp; (NOT( ISBLANK(  CH_Reviewer__c  ) ))  &amp;&amp;  CH_KnowledgeRecordTypeCheck__c = TRUE</errorConditionFormula>
    <errorMessage>You Cannot  edit  Reviewer Field</errorMessage>
</ValidationRule>