src/objects/Knowledge__kav/validationRules/Contributor_External_Publish_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Contributor_External_Publish_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
OR( IsVisibleInPkb , IsVisibleInCsp , IsVisibleInPrm ), $Permission.KCS_Contributor )</errorConditionFormula>
    <errorMessage>As a KCS Contributor you cannot edit an externally published article. If you want to enhance this article please record you suggestion in the article feed.</errorMessage>
</ValidationRule>