src/objects/Knowledge__kav/validationRules/Enforce_validation_selections.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_validation_selections</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
ISPICKVAL(Technical_review_needed__c ,&quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Validation requirement missing (scroll to the bottom of the page)</errorMessage>
</ValidationRule>