src/objects/Knowledge__kav/validationRules/Engineering_Approval_Permission_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Engineering_Approval_Permission_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF (AND (ISChanged( Status_Engineering_Review__c ), 
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
$Permission.Knowledge_Engineering_Approver = FALSE),TRUE,FALSE)</errorConditionFormula>
    <errorMessage>You are not permitted to set engineering approval statuses</errorMessage>
</ValidationRule>