src/objects/Knowledge__kav/validationRules/Engineering_Review_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Engineering_Review_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
IsPickVal( Status_Engineering_Review__c, &quot;Passed&quot;), Engineering_reviewer__c = &quot;&quot;)</errorConditionFormula>
    <errorMessage>Please enter the Engineering Reviewer</errorMessage>
</ValidationRule>