src/objects/Knowledge__kav/validationRules/External_Approval_Permission_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>External_Approval_Permission_Check</fullName>
    <active>true</active>
    <description>Checks if user can set External approval</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
OR(
AND(
Ischanged(IsVisibleInPkb),
IsVisibleInPkb
),
AND(
Ischanged(IsVisibleInCsp),
IsVisibleInCsp
),
AND(
Ischanged(IsVisibleInPrm),
IsVisibleInPrm
)
),

AND ($Permission.KCS_Publisher = FALSE, $Permission.KCS_Coach = FALSE)
)</errorConditionFormula>
    <errorMessage>You are not permitted to publish articles externally</errorMessage>
</ValidationRule>