src/objects/Knowledge__kav/validationRules/Failed_validation_internal_notes_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Failed_validation_internal_notes_check</fullName>
    <active>true</active>
    <description>Failed validation internal notes check</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
OR( IsPickVal( Status_Legal_Review__c, &quot;Failed&quot;),
IsPickVal( Status_Marcom_Review__c , &quot;Failed&quot;),
IsPickVal( Status_Product_Mgmt_Review__c ,&quot;Failed&quot;),
IsPickVal( Status_Technical_Review__c ,&quot;Failed&quot;),
IsPickVal( Status_Engineering_Review__c ,&quot;Failed&quot;)), Internal_Notes__c =&quot;&quot;)</errorConditionFormula>
    <errorMessage>Please enter internal notes for reason validation failed</errorMessage>
</ValidationRule>