src/objects/Knowledge__kav/validationRules/Legal_Approval_Permission_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Approval_Permission_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF (AND (ISChanged( Status_Legal_Review__c ),
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
$Permission.Knowledge_Legal_Approver = FALSE),TRUE,FALSE)</errorConditionFormula>
    <errorMessage>You are not permitted to set legal approval statuses</errorMessage>
</ValidationRule>