src/objects/Knowledge__kav/validationRules/Legal_Review_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Review_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
IsPickVal(Status_Legal_Review__c, &quot;Passed&quot;), Legal_reviewer__c = &quot;&quot;)</errorConditionFormula>
    <errorMessage>Please enter the Legal Reviewer</errorMessage>
</ValidationRule>