src/objects/Knowledge__kav/validationRules/Macorm_Review_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Macorm_Review_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
IsPickVal( Status_Marcom_Review__c, &quot;Passed&quot;), Marcom_reviewer__c = &quot;&quot;)</errorConditionFormula>
    <errorMessage>Please enter the Marcom Reviewer</errorMessage>
</ValidationRule>