src/objects/Knowledge__kav/validationRules/Mandatory_field_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_field_check</fullName>
    <active>true</active>
    <description>Mandatory Field Check</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
OR(Question_Problem__c =&quot;&quot;, Answer_Solution__c =&quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Please complete Question / Probelm, Answer / Solution fields</errorMessage>
</ValidationRule>