src/objects/Knowledge__kav/validationRules/Marcomm_Approval_Permission_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Marcomm_Approval_Permission_Check</fullName>
    <active>true</active>
    <description>Checks if user can set Marcomm approval</description>
    <errorConditionFormula>IF (AND (ISChanged( Status_Marcom_Review__c ), 
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
$Permission.Knowledge_Marcomm_Approver = FALSE),TRUE,FALSE)</errorConditionFormula>
    <errorMessage>You are not permitted to set Marcomm approval statuses</errorMessage>
</ValidationRule>