src/objects/Knowledge__kav/validationRules/Priority_not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_not_Null</fullName>
    <active>true</active>
    <description>Priority is required for Announcement</description>
    <errorConditionFormula>RecordType.DeveloperName  = &quot;Announcement&quot; 
&amp;&amp; ISBLANK( TEXT(Priority__c))</errorConditionFormula>
    <errorMessage>Priority is Required when record type is Announcement</errorMessage>
</ValidationRule>