src/objects/Knowledge__kav/validationRules/Product_Manager_Approval_Permission_Chec.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Manager_Approval_Permission_Chec</fullName>
    <active>true</active>
    <description>Checks if user can set Product Manager approval</description>
    <errorConditionFormula>IF (AND (ISChanged( Status_Product_Mgmt_Review__c ), 
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
$Permission.Knowledge_Product_Manager_Approver = FALSE),TRUE,FALSE)</errorConditionFormula>
    <errorMessage>You are not permitted to set product manger approval statuses</errorMessage>
</ValidationRule>