src/objects/Knowledge__kav/validationRules/Product_Manager_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Manager_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
IsPickVal(Status_Product_Mgmt_Review__c,&quot;Passed&quot;), Product_Management_reviewer__c =&quot;&quot;)</errorConditionFormula>
    <errorMessage>Please enter the Product Mgmt. Reviewer</errorMessage>
</ValidationRule>