src/objects/Knowledge__kav/validationRules/Reason_for_confidentiality_cannot_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_confidentiality_cannot_blank</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &quot;Knowledge_Article&quot; &amp;&amp;  
IsVisibleInCsp == false &amp;&amp; ISBLANK(R_C__c)</errorConditionFormula>
    <errorMessage>&apos;Reason for confidentiality&apos; field cannot be blank</errorMessage>
</ValidationRule>