src/objects/Knowledge__kav/validationRules/Technical_Approval_Permission_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Technical_Approval_Permission_Check</fullName>
    <active>true</active>
    <description>Checks if user can set Technically approval</description>
    <errorConditionFormula>IF (AND (ISChanged(Status_Technical_Review__c),
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
$Permission.Knowledge_Technical_Approver = FALSE),TRUE,FALSE)</errorConditionFormula>
    <errorMessage>You are not permitted to set technical approval statuses</errorMessage>
</ValidationRule>