src/objects/Knowledge__kav/validationRules/Title_and_Summary_Cannot_be_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Title_and_Summary_Cannot_be_Same</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;Knowledge_Article&quot;,
LOWER(Summary) == LOWER(Title))</errorConditionFormula>
    <errorMessage>Title and Summary fields cannot be same. Please fill summary with few keywords.</errorMessage>
</ValidationRule>