src/objects/Knowledge__kav/listViews/CH_Problem_Articles_Global.listView-meta.xml
<ListView>
    <fullName>CH_Problem_Articles_Global</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>CH_Workgroup__c</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <label>CH Problem Articles - Global</label>
    <sharedTo>
        <group>CH_Workgroup_Approvers</group>
        <group>CH_Workgroup_Authors</group>
        <group>CH_Workgroup_Publishers</group>
    </sharedTo>
</ListView>