src/objects/Knowledge__kav/listViews/Internal_Knowledge_Published_Articles.listView-meta.xml
<ListView>
    <fullName>Internal_Knowledge_Published_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>Article_Category__c</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>CH_Workgroup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Internal_Knowledge</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Internal Knowledge- Published Articles</label>
</ListView>