src/objects/Knowledge__kav/listViews/LOA_Gate_Articles.listView-meta.xml
<ListView>
    <fullName>LOA_Gate_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Article_Category__c</field>
        <operation>equals</operation>
        <value>Gates/LOA</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Internal_Knowledge</value>
    </filters>
    <label>L2D/Gate Articles- Internal Knowledge</label>
</ListView>