src/objects/Knowledge__kav/listViews/OIF_Articles.listView-meta.xml
<ListView>
    <fullName>OIF_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Internal_Knowledge</value>
    </filters>
    <filters>
        <field>Article_Category__c</field>
        <operation>equals</operation>
        <value>Order Intake Forecast</value>
    </filters>
    <label>OIF Articles- Internal Knowledge</label>
</ListView>