src/objects/Knowledge__kav/listViews/PRM_Knowledge_Articles.listView-meta.xml
<ListView>
    <fullName>PRM_Knowledge_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_CHANNEL_PRM</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1,2</value>
    </filters>
    <label>PRM Knowledge Articles</label>
    <sharedTo>
        <group>PRM_Admin</group>
        <group>PRM_PEM_Team</group>
    </sharedTo>
</ListView>